<resources>
    <string name="app_name">MegaLot</string>
    <string name="google_client_id">587116366092–9tp3nol6hjtku89v3fk01vqpf1r7u896.apps.googleusercontent.com</string>
    <string name="facebook_app_id">507341267851813</string>
    <string name="fb_login_protocol_scheme">fb507341267851813</string>
    <string name="facebook_client_token">c2011fe3126537f03bc41e327cc09cf6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="view_as_a_guest">View as a Guest</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="country">Country</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="continue_">Continue</string>
    <string name="welcome">Welcome</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_tickets">Total Tickets</string>
    <string name="get_your_money">Get your money</string>
    <string name="next_draw">Next Draw</string>
    <string name="prize_amount">Prize Amount</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="super_winner">Super Winner</string>
    <string name="winning_numbers">"Winning Numbers: "</string>
    <string name="my_prize">My Prize</string>
    <string name="draw_results">Draw Results</string>
    <string name="views">Views</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="previous_wins">Previous Wins</string>
    <string name="my_tickets">My Tickets</string>
    <string name="my_withdrawals">My Withdrawals</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="my_balance">My Balance</string>
    <string name="minimum_withdrawal_amount_is">Minimum withdrawal amount is</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="winning_numbers_">Winning Numbers</string>
    <string name="my_ticket">My Ticket</string>
    <string name="winning_amount">Winning Amount</string>
    <string name="view_my_ticket">View My Ticket</string>
    <string name="big_winner">Big Winner</string>
    <string name="winning_tickets">Winning Tickets</string>
    <string name="results">Results</string>
    <string name="place">place</string>
    <string name="total_winning_amount">Total Winning Amount</string>
    <string name="no_of_winning_tickets">NO. of winning tickets</string>
    <string name="winning_amount_ticket">Winning amount / ticket</string>
    <string name="withdrawn_amount">Withdrawn Amount</string>
    <string name="total_accumulated_amount">Total Accumulated Amount</string>
    <string name="withdraw">Withdraw</string>
    <string name="mega_lot">Mega-lot</string>
    <string name="a_combination_was_auto_generated">A Combination was Auto-generated!</string>
    <string name="watch_ad_amp_get_10_more"><![CDATA[Watch Ad & Get 10 More]]></string>
    <string name="collect">Collect</string>
    <string name="setting_description">To Start generate combinations, you \n need to allow access from your mobile\n settings.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="bracket_level">Bracket Level</string>
    <string name="loading">Loading... Please wait!</string>
    <string name="done">Done</string>
    <string name="language">Language</string>
    <string name="faqs">FAQs</string>
    <string name="about_us">About Us</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="my_information">My Information</string>
    <string name="change_picture"><u>Change Picture</u></string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="change_password">Change Password</string>
    <string name="update_information">Update Information</string>
    <string name="select_language">Select Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="change_language">Change Language</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="internet_connection_error">Please check your internet connection and try again!</string>
    <string name="fill_field">This field can\'t be empty</string>
    <string name="wrong_email">Wrong email format!</string>
    <string name="email_existed">Email address is already existed!</string>
    <string name="update_information_successfully">Profile updated successfully!</string>
    <string name="no_notifications">No Notifications</string>
    <string name="log_out_desc">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="notification_desc">Are you sure you want to delete this notification?</string>
    <string name="delete">Delete</string>
    <string name="bracket">Bracket</string>
    <string name="your_bracket">Your Bracket</string>
    <string name="you_will_get_extra_tickets_for_each">You will get extra tickets for each</string>
    <string name="pop_up_ticket">Pop Up Ticket</string>
    <string name="tickets">Tickets</string>
    <string name="youtube_view">YouTube View</string>
    <string name="app_installment">App Installment</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change">Change</string>
    <string name="current_password_wrong">Current password is wrong</string>
    <string name="not_equal">Passwords don\'t match</string>
    <string name="password_changed">Password changed successfully!</string>
    <string name="number_of_watches">Number of Watches</string>
    <string name="recommend_app">Let me recommend you this application</string>
    <string name="google_signup_failed">Google sign up failed!</string>
    <string name="withdraw_request">Your withdraw request has been received and you will be contacted soon!</string>
    <string name="low_balance">Your current balance is not enough to complete the withdrawal process!</string>

</resources>