<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/_35sdp"
    android:layout_marginEnd="@dimen/_35sdp"
    android:background="@drawable/radius10_white"
    android:padding="@dimen/_15sdp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aller_bold"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aller_regular"
        android:text="@string/current_password"
        android:textAlignment="viewStart"
        android:textColor="@color/gray"
        android:textSize="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_5sdp"/>
    <EditText
        android:id="@+id/current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="*****"
        android:textAlignment="viewStart"
        android:textColor="@color/dark_green"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_10ssp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aller_regular"
        android:text="@string/new_password"
        android:textAlignment="viewStart"
        android:textColor="@color/gray"
        android:textSize="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="*****"
        android:textAlignment="viewStart"
        android:textColor="@color/dark_green"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_10ssp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aller_regular"
        android:text="@string/confirm_new_password"
        android:textAlignment="viewStart"
        android:textColor="@color/gray"
        android:textSize="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_10sdp"/>
    <EditText
        android:id="@+id/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="*****"
        android:textAlignment="viewStart"
        android:textColor="@color/dark_green"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_10ssp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confirm_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:backgroundTint="@color/dark_green"
        android:textAllCaps="false"
        android:text="@string/change"
        android:textColor="@color/white"
        android:gravity="center"
        android:fontFamily="@font/aller_bold"
        android:textSize="@dimen/_13ssp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/change"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:backgroundTint="@color/red"
        android:textAllCaps="false"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:gravity="center"
        android:fontFamily="@font/aller_bold"
        android:textSize="@dimen/_13ssp"/>

</androidx.appcompat.widget.LinearLayoutCompat>