<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/off_white"
    android:orientation="vertical"
    tools:context=".Views.Main.Account.MyInformation.MyInformationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_15sdp">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/back_arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/my_information"
            android:fontFamily="@font/aller_bold"
            android:textSize="@dimen/_17ssp"
            android:textColor="@color/dark_green"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profile_image_CV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_90sdp"
                app:cardElevation="@dimen/_5sdp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    app:civ_circle_background_color="@color/white"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="@dimen/_2sdp"
                    android:src="@drawable/logo2"/>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/change_picture"
                android:textColor="@color/super_light_green"
                android:fontFamily="@font/aller_bold"
                android:textSize="@dimen/_10ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/aller_bold"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/_9ssp"
                android:layout_marginStart="@dimen/_12sdp"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp">
                <EditText
                    android:id="@+id/username_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/_10ssp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:hint="@string/username"
                    android:fontFamily="@font/aller_regular"
                    android:textSize="@dimen/_9ssp"/>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/aller_bold"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/_9ssp"
                android:layout_marginStart="@dimen/_12sdp"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp">
                <EditText
                    android:id="@+id/email_address_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/_10ssp"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:hint="@string/email_address"
                    android:fontFamily="@font/aller_regular"
                    android:textSize="@dimen/_9ssp"/>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/aller_bold"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/_9ssp"
                android:layout_marginStart="@dimen/_12sdp"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp">
                <EditText
                    android:id="@+id/dob_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/_10ssp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:hint="@string/date_of_birth"
                    android:fontFamily="@font/aller_regular"
                    android:textSize="@dimen/_9ssp"/>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/aller_bold"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/_9ssp"
                android:layout_marginStart="@dimen/_12sdp"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp">
                <EditText
                    android:id="@+id/country_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/_10ssp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:hint="@string/country"
                    android:fontFamily="@font/aller_regular"
                    android:textSize="@dimen/_9ssp"/>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/aller_bold"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/_9ssp"
                android:layout_marginStart="@dimen/_12sdp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:backgroundTint="@color/green"
                android:text="@string/change_phone_number"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/aller_bold"
                android:textSize="@dimen/_10ssp"
                app:cornerRadius="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/aller_bold"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/_9ssp"
                android:layout_marginStart="@dimen/_12sdp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:backgroundTint="@color/green"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/aller_bold"
                android:textSize="@dimen/_10ssp"
                app:cornerRadius="@dimen/_5sdp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:backgroundTint="@color/dark_green"
                android:text="@string/update_information"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/aller_bold"
                android:textSize="@dimen/_10ssp"
                app:cornerRadius="@dimen/_5sdp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>