<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_20sdp"
    android:padding="@dimen/_20sdp"
    android:background="@drawable/radius_top_white"
    android:orientation="vertical"
    tools:context=".Views.Main.Home.WithdrawBottomSheetDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/get_your_money"
            android:textColor="@color/dark_green"
            android:fontFamily="@font/aller_bold"
            android:textSize="@dimen/_17ssp" />

        <ImageView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/close"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/my_balance"
        android:textColor="@color/dark_green"
        android:fontFamily="@font/aller_bold"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/my_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aller_bold"
            android:text="2564.56"
            android:textColor="@color/orange"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/aller_bold"
            android:text="JD"
            android:textColor="@color/orange"
            android:textSize="@dimen/_11ssp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/minimum_withdrawal_amount_is"
        android:textColor="@color/green"
        android:fontFamily="@font/aller_regular"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/withdrawal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aller_bold"
            android:text="10.00"
            android:textColor="@color/orange"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/aller_bold"
            android:text="JD"
            android:textColor="@color/orange"
            android:textSize="@dimen/_11ssp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/radius10_dark_green"
        android:padding="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:text="@string/withdrawal"
        android:textColor="@color/white"
        android:fontFamily="@font/aller_bold"
        android:textSize="@dimen/_10ssp"
        android:textAllCaps="false"/>

</androidx.appcompat.widget.LinearLayoutCompat>